adds more stuff

--- a/Checkers-Newell.ipynb
+++ b/Checkers-Newell.ipynb
@@ -458,6 +458,162 @@
    "source": [
     "Well this section seems to be dead to me. I cannot get anything to work consistently. We'll have to go with the old nn implementation and waiting instead. My server could work as well. "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Reinforcement Learning With a Neural Network\n",
+    "\n",
+    "Will be a combination of the NNet for Hanoi and tic tac toe.\n",
+    "\n",
+    "First learn against a dumb opponent. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here is the representation of the board. *Unsure of which side should be player. Currently I think its red? Here represented as ones*\n",
+    "\n",
+    "Here we train the red player?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from board import *\n",
+    "from piece import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      0 |  1 |  2 |  3 |  4 |  5 |  6 |  7\n",
+      " 0 | -  | BK | -  | B  | -  | B  | -  | B \n",
+      " 1 | B  | -  | B  | -  | B  | -  | B  | - \n",
+      " 2 | -  | B  | -  | B  | -  | B  | -  | B \n",
+      " 3 | -  | -  | -  | -  | -  | -  | -  | - \n",
+      " 4 | -  | -  | -  | -  | -  | -  | -  | - \n",
+      " 5 | R  | -  | R  | -  | R  | -  | R  | - \n",
+      " 6 | -  | R  | -  | R  | -  | R  | -  | R \n",
+      " 7 | R  | -  | R  | -  | R  | -  | RK | - \n",
+      "\n",
+      "The first of valid moves is seen easily in the board, from 0,5 to 4,1\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0,\n",
+       " -3,\n",
+       " 0,\n",
+       " -1,\n",
+       " 0,\n",
+       " -1,\n",
+       " 0,\n",
+       " -1,\n",
+       " -1,\n",
+       " 0,\n",
+       " -1,\n",
+       " 0,\n",
+       " -1,\n",
+       " 0,\n",
+       " -1,\n",
+       " 0,\n",
+       " 0,\n",
+       " -1,\n",
+       " 0,\n",
+       " -1,\n",
+       " 0,\n",
+       " -1,\n",
+       " 0,\n",
+       " -1,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 1,\n",
+       " 0,\n",
+       " 1,\n",
+       " 0,\n",
+       " 1,\n",
+       " 0,\n",
+       " 1,\n",
+       " 0,\n",
+       " 0,\n",
+       " 1,\n",
+       " 0,\n",
+       " 1,\n",
+       " 0,\n",
+       " 1,\n",
+       " 0,\n",
+       " 1,\n",
+       " 1,\n",
+       " 0,\n",
+       " 1,\n",
+       " 0,\n",
+       " 1,\n",
+       " 0,\n",
+       " 3,\n",
+       " 0,\n",
+       " 5,\n",
+       " 0,\n",
+       " 4,\n",
+       " 1]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b = Board()\n",
+    "dr = b.draught\n",
+    "## add kings to show that they have *3 weight\n",
+    "blackKing = Piece(Color.BLACK, (0,1))\n",
+    "blackKing.king_me()\n",
+    "redKing = Piece(Color.RED, (7,6))\n",
+    "redKing.king_me()\n",
+    "dr[0, 1] = blackKing\n",
+    "dr[7, 6] = redKing\n",
+    "b.draught = dr\n",
+    "print(b)\n",
+    "print(\"The first of valid moves is seen easily in the board, from 0,5 to 4,1\")\n",
+    "moves = b.validMoves()\n",
+    "b.stateMoveVectorForNN(moves[0])\n",
+    "#shows a vector representation of the board for the nerual network.\n",
+    "#see newStateRep in notebook 20(?) for more. \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
