--- a/Checkers-Newell.ipynb
+++ b/Checkers-Newell.ipynb
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -514,77 +514,10 @@
     {
      "data": {
       "text/plain": [
-       "[0,\n",
-       " -3,\n",
-       " 0,\n",
-       " -1,\n",
-       " 0,\n",
-       " -1,\n",
-       " 0,\n",
-       " -1,\n",
-       " -1,\n",
-       " 0,\n",
-       " -1,\n",
-       " 0,\n",
-       " -1,\n",
-       " 0,\n",
-       " -1,\n",
-       " 0,\n",
-       " 0,\n",
-       " -1,\n",
-       " 0,\n",
-       " -1,\n",
-       " 0,\n",
-       " -1,\n",
-       " 0,\n",
-       " -1,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 1,\n",
-       " 0,\n",
-       " 1,\n",
-       " 0,\n",
-       " 1,\n",
-       " 0,\n",
-       " 1,\n",
-       " 0,\n",
-       " 0,\n",
-       " 1,\n",
-       " 0,\n",
-       " 1,\n",
-       " 0,\n",
-       " 1,\n",
-       " 0,\n",
-       " 1,\n",
-       " 1,\n",
-       " 0,\n",
-       " 1,\n",
-       " 0,\n",
-       " 1,\n",
-       " 0,\n",
-       " 3,\n",
-       " 0,\n",
-       " 5,\n",
-       " 0,\n",
-       " 4,\n",
-       " 1]"
+       "68"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -603,7 +536,8 @@
     "print(b)\n",
     "print(\"The first of valid moves is seen easily in the board, from 0,5 to 4,1\")\n",
     "moves = b.validMoves()\n",
-    "b.stateMoveVectorForNN(moves[0])\n",
+    "vector = b.stateMoveVectorForNN(moves[0])\n",
+    "len(vector)\n",
     "#shows a vector representation of the board for the nerual network.\n",
     "#see newStateRep in notebook 20(?) for more. \n"
    ]
